--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
     <title></title>
     <link rel="icon" href="">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 </head>
 <body>
 <header>
 </header>
-
+ <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="img/maguro.jpg" alt="マグロ"></div>
+        <div class="swiper-slide"><img src="img/salmon.jpg" alt="サーモン"></div>
+        <div class="swiper-slide"><img src="img/saba.jpeg" alt="サバ"></div>
+        <div class="swiper-slide"><img src="img/tai.jpg" alt="タイ"></div>
+        <div class="swiper-slide"><img src="img/aji.jpg" alt="アジ"></div>
+        <div class="swiper-slide"><img src="img/iwashi.jpg" alt="イワシ"></div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+</div>
 <main>
 <section class="heading">
     <div class="heading-inner">
@@ -230,6 +243,26 @@
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
     <p>© 2025 魚の特徴辞典. All rights reserved.</p>
 </footer>
-
+<script src="js/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper(".mySwiper", {
+      spaceBetween: 30,
+      centeredSlides: true,
+      effect: "fade",
+      autoplay: {
+        delay: 5000, 
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+        speed: 3000,
+    });
+</script>
 </body>
 </html>
