--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <section class="fish-section">
     <h2>代表的な魚の種類</h2>
     <p class="lead">日本の食卓を彩る、栄養豊富な魚たちをご紹介します</p>
+    <div id="app">test: {{ fishlist[0] }}</div>
 <div class="container">
     <article class="fish-card"Grid1>
         <div class="fish-image">
@@ -243,6 +244,40 @@
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
     <p>© 2025 魚の特徴辞典. All rights reserved.</p>
 </footer>
+
+<script src="js/vue.global.js"></script>
+<script>
+  const { createApp, ref } = Vue
+
+  createApp({
+    setup() {
+      const message = ref('Hello vue!')
+      const fishlist = 
+      [
+        {
+            "title": "日本語で遊ぼう",
+            "author": "田中太郎",
+            "publishedYear": 1998
+        },
+        {
+            "title": "サルでもわかるPython",
+            "author": "山田次郎",
+            "publishedYear": 2016
+        },
+        {
+            "title": "ディープラーニング解体新書",
+            "author": "鈴木三郎",
+            "publishedYear": 2020
+        }
+    ]
+
+      return {
+        message
+      }
+    }
+  }).mount('#app')
+</script>
+
 <script src="js/swiper-bundle.min.js"></script>
 <script>
     var swiper = new Swiper(".mySwiper", {
