--- a/index.html
+++ b/index.html
@@ -47,125 +47,127 @@
 <section class="fish-section">
     <h2>代表的な魚の種類</h2>
     <p class="lead">日本の食卓を彩る、栄養豊富な魚たちをご紹介します</p>
-    <div id="app">test: {{ fishlist[0] }}</div>
-<div class="container">
-    <article class="fish-card"Grid1>
-        <div class="fish-image">
-            <img src="img/fresh-tuna-fish-sashimi.jpg" alt="マグロ">
-        </div>
-        <div class="fish-content">
-            <div class="fish-header">
-                <h3>マグロ</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+    <div id="app">test: {{ fishlist[0].title }}</div>
+    <div id="fish-erea" class="container">
+        <article class="fish-card"Grid1 v-for="item in fishlist">
+            <div class="fish-image">
+                {{ item.image }}
             </div>
-            <p class="en">Thunnus</p>
-            <p>赤身魚の代表格。DHAやEPAが豊富で、脳の活性化や血流改善に効果的です。</p>
-            <ul class="tags">
-                <li>高タンパク質</li><li>DHA豊富</li><li>低脂肪</li>
-            </ul>
-            <p class="detail">
-                <strong>生息地:</strong> 太平洋・大西洋の暖海域<br>
-                <strong>旬:</strong> 冬〜春
-            </p>
-        </div>
-    </article>
-    <article class="fish-card"Grid2>
-        <div class="fish-image">
-            <img src="img/fresh-salmon-fish-fillet.jpg" alt="サーモン">
-        </div>
-        <div class="fish-content">
-            <div class="fish-header">
-                <h3>サーモン</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+            <div class="fish-content">
+                <div class="fish-header">
+                    <h3>{{ item.name }}</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+                </div>
+                <p class="en">{{ item.english_name }}</p>
+                <p>{{ item.description }}</p>
+                <ul class="tags">
+                    {{ item.nutrition }}
+                </ul>
+                <p class="detail">
+                    {{ item.habitat }}<br>
+                    {{ item.season }}
+                </p>
+                
+
             </div>
-            <p class="en">Salmo salar</p>
-            <p>良質なビタミンDを含む魚。抗酸化作用のあるアスタキサンチンを多く含みます。</p>
-            <ul class="tags">
-                <li>オメガ3脂肪酸</li><li>ビタミンD</li><li>アスタキサンチン</li>
-            </ul>
-            <p class="detail">
-                <strong>生息地:</strong> 北太平洋・北大西洋<br>
-                <strong>旬:</strong> 秋〜冬
-            </p>
-        </div>
-    </article>
-    <article class="fish-card"Grid3>
-        <div class="fish-image">
-            <img src="img/fresh-mackerel-fish.jpg" alt="サバ">
-        </div>
-        <div class="fish-content">
-            <div class="fish-header">
-                <h3>サバ</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+        </article>
+        <article class="fish-card"Grid2>
+            <div class="fish-image">
+                <img src="img/fresh-salmon-fish-fillet.jpg" alt="サーモン">
             </div>
-            <p class="en">Scomber</p>
-            <p>青魚の代表。血液をサラサラにするEPAが豊富に含まれています。</p>
-            <ul class="tags">
-                <li>EPA豊富</li><li>ビタミンB12</li><li>セレン</li>
-            </ul>
-            <p class="detail">
-                <strong>生息地:</strong> 日本近海・太平洋<br>
-                <strong>旬:</strong> 秋〜冬
-            </p>
-        </div>
-    </article>
-    <article class="fish-card"Grid4>
-        <div class="fish-image">
-            <img src="img/fresh-sea-bream-tai-fish.jpg" alt="タイ">
-        </div>
-        <div class="fish-content">
-            <div class="fish-header">
-                <h3>タイ</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+            <div class="fish-content">
+                <div class="fish-header">
+                    <h3>サーモン</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+                </div>
+                <p class="en">Salmo salar</p>
+                <p>良質なビタミンDを含む魚。抗酸化作用のあるアスタキサンチンを多く含みます。</p>
+                <ul class="tags">
+                    <li>オメガ3脂肪酸</li><li>ビタミンD</li><li>アスタキサンチン</li>
+                </ul>
+                <p class="detail">
+                    <strong>生息地:</strong> 北太平洋・北大西洋<br>
+                    <strong>旬:</strong> 秋〜冬
+                </p>
             </div>
-            <p class="en">Pagrus major</p>
-            <p>祝い事に欠かせない日本魚。淡白な味わいで高たんぱく低脂質です。</p>
-            <ul class="tags">
-                <li>高タンパク</li><li>ビタミンB1</li><li>低脂肪</li>
-            </ul>
-            <p class="detail"><strong>生息地:</strong> 日本近海<br>
-                <strong>旬:</strong> 冬〜春
-            </p>
-        </div>
-    </article>
-    <article class="fish-card"Grid5>
-        <div class="fish-image">
-            <img src="img/fresh-horse-mackerel-aji-fish.jpg" alt="アジ">
-        </div>
-        <div class="fish-content">
-            <div class="fish-header">
-                <h3>アジ</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+        </article>
+        <article class="fish-card"Grid3>
+            <div class="fish-image">
+                <img src="img/fresh-mackerel-fish.jpg" alt="サバ">
             </div>
-            <p class="en">Trachurus japonicus</p>
-            <p>日本の食卓に欠かせない定番魚。骨まで食べられるカルシウム源です。</p>
-            <ul class="tags">
-                <li>カルシウム</li><li>タウリン</li><li>ビタミンE</li>
-            </ul>
-            <p class="detail"><strong>生息地:</strong> 日本近海<br>
+            <div class="fish-content">
+                <div class="fish-header">
+                    <h3>サバ</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+                </div>
+                <p class="en">Scomber</p>
+                <p>青魚の代表。血液をサラサラにするEPAが豊富に含まれています。</p>
+                <ul class="tags">
+                    <li>EPA豊富</li><li>ビタミンB12</li><li>セレン</li>
+                </ul>
+                <p class="detail">
+                    <strong>生息地:</strong> 日本近海・太平洋<br>
+                    <strong>旬:</strong> 秋〜冬
+                </p>
+            </div>
+        </article>
+        <article class="fish-card"Grid4>
+            <div class="fish-image">
+                <img src="img/fresh-sea-bream-tai-fish.jpg" alt="タイ">
+            </div>
+            <div class="fish-content">
+                <div class="fish-header">
+                    <h3>タイ</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+                </div>
+                <p class="en">Pagrus major</p>
+                <p>祝い事に欠かせない日本魚。淡白な味わいで高たんぱく低脂質です。</p>
+                <ul class="tags">
+                    <li>高タンパク</li><li>ビタミンB1</li><li>低脂肪</li>
+                </ul>
+                <p class="detail"><strong>生息地:</strong> 日本近海<br>
+                    <strong>旬:</strong> 冬〜春
+                </p>
+            </div>
+        </article>
+        <article class="fish-card"Grid5>
+            <div class="fish-image">
+                <img src="img/fresh-horse-mackerel-aji-fish.jpg" alt="アジ">
+            </div>
+            <div class="fish-content">
+                <div class="fish-header">
+                    <h3>アジ</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+                </div>
+                <p class="en">Trachurus japonicus</p>
+                <p>日本の食卓に欠かせない定番魚。骨まで食べられるカルシウム源です。</p>
+                <ul class="tags">
+                    <li>カルシウム</li><li>タウリン</li><li>ビタミンE</li>
+                </ul>
+                <p class="detail"><strong>生息地:</strong> 日本近海<br>
+                    <strong>旬:</strong> 夏〜秋
+                </p>
+            </div>
+        </article>
+        <article class="fish-card"Grid6>
+            <div class="fish-image">
+                <img src="img/fresh-sardine-iwashi-fish.jpg" alt="イワシ">
+            </div>
+            <div class="fish-content">
+                <div class="fish-header">
+                    <h3>イワシ</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+                </div>
+                <p class="en">Sardinops</p>
+                <p>小さくても栄養満点。カルシウムやDHAが豊富で成長期にもおすすめ。</p>
+                <ul class="tags">
+                    <li>カルシウム</li><li>DHA</li><li>EPA</li>
+                </ul>
+                <p class="detail"><strong>生息地:</strong> 日本近海・太平洋<br>
                 <strong>旬:</strong> 夏〜秋
-            </p>
-        </div>
-    </article>
-    <article class="fish-card"Grid6>
-        <div class="fish-image">
-            <img src="img/fresh-sardine-iwashi-fish.jpg" alt="イワシ">
-        </div>
-        <div class="fish-content">
-            <div class="fish-header">
-                <h3>イワシ</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fish h-6 w-6 text-primary"><path d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"></path><path d="M18 12v.5"></path><path d="M16 17.93a9.77 9.77 0 0 1 0-11.86"></path><path d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"></path><path d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"></path><path d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"></path></svg>
+                </p>
             </div>
-            <p class="en">Sardinops</p>
-            <p>小さくても栄養満点。カルシウムやDHAが豊富で成長期にもおすすめ。</p>
-            <ul class="tags">
-                <li>カルシウム</li><li>DHA</li><li>EPA</li>
-            </ul>
-            <p class="detail"><strong>生息地:</strong> 日本近海・太平洋<br>
-            <strong>旬:</strong> 夏〜秋
-            </p>
-        </div>
-    </article>
+        </article>
 </div>
 </section>
 
@@ -253,29 +255,64 @@
     setup() {
       const message = ref('Hello vue!')
       const fishlist = 
+      ref(
       [
         {
-            "title": "日本語で遊ぼう",
-            "author": "田中太郎",
-            "publishedYear": 1998
+            "name": "マグロ",
+            "english_name": "Thunnus",
+            "description": "赤身魚の代表格。DHAやEPAが豊富で、脳の活性化や血流改善に効果的です。",
+            "nutrition": ("高タンパク質", "DHA豊富","低脂肪"),
+            "habitat": "生息地: 太平洋・大西洋の暖海域",
+            "season": "旬: 冬〜春",
         },
         {
-            "title": "サルでもわかるPython",
-            "author": "山田次郎",
-            "publishedYear": 2016
+            "name": "サーモン",
+            "english_name": "Salmon",
+            "description": "良質なビタミンDを含む魚。抗酸化作用のあるアスタキサンチンを多く含みます。",
+            "nutrition": ("オメガ3脂肪酸", "ビタミンD","アスタキサンチン"),
+            "habitat": "生息地: 太平洋・大西洋の暖海域",
+            "season": "旬: 秋〜冬",
         },
         {
-            "title": "ディープラーニング解体新書",
-            "author": "鈴木三郎",
-            "publishedYear": 2020
+            "name": "サバ",
+            "english_name": "Scomber",
+            "description": "青魚の代表。血液をサラサラにするEPAが豊富に含まれています。",
+            "nutrition": ("FPA豊富", "ビタミンB12","セレン"),
+            "habitat": "生息地: 日本近海・太平洋",
+            "season": "旬: 秋〜冬",
+        },
+        {
+            "name": "タイ",
+            "english_name": "Pagrus major",
+            "description": "祝い事に欠かせない日本魚。淡白な味わいで高たんぱく低脂質です。",
+            "nutrition": ("高タンパク", "ビタミンB1","低脂肪"),
+            "habitat": "生息地: 日本近海",
+            "season": "旬: 冬〜春",
+        },
+        {
+            "name": "アジ",
+            "english_name": "Trachurus japonicus",
+            "description": "日本の食卓に欠かせない定番魚。骨まで食べられるカルシウム源です。",
+            "nutrition": ("カルシウム", "タウリン","ビタミンE"),
+            "habitat": "生息地: 日本近海",
+            "season": "旬: 夏〜秋",
+        },
+        {
+            "name": "イワシ",
+            "english_name": "Sardinops",
+            "description": "小さくても栄養満点。カルシウムやDHAが豊富で成長期にもおすすめ。",
+            "nutrition": ("カルシウム", "DHA","EPA"),
+            "habitat": "生息地: 日本近海・太平洋",
+            "season": "旬: 夏〜秋",
         }
     ]
+      )
 
       return {
-        message
+        message, fishlist
       }
     }
-  }).mount('#app')
+  }).mount('#fish-erea')
 </script>
 
 <script src="js/swiper-bundle.min.js"></script>
